# ncnn-example

./: .gitignore
Android-example/: settings.gradle
Android-example/app/: build.gradle
Android-example/app/src/androidTest/java/me/xcyoung/ncnn/: ExampleInstrumentedTest.kt
Android-example/app/src/main/: AndroidManifest.xml
Android-example/app/src/main/cpp/: CMakeLists.txt  JNIReco.cpp  Reco.cpp  Reco.h
Android-example/app/src/main/java/me/xcyoung/ncnn/: MainActivity.kt  Reco.java
Android-example/app/src/main/res/values/: strings.xml  themes.xml
Android-example/app/src/main/res/values-night/: themes.xml
Android-example/app/src/test/java/me/xcyoung/ncnn/: ExampleUnitTest.kt
Android-example/gradle/wrapper/: gradle-wrapper.properties
iOS-example/ncnn-example/: AppDelegate.h  AppDelegate.m  Reco.cpp  RecoInterface.h  RecoInterface.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
iOS-example/ncnn-example.xcodeproj/: project.pbxproj
